@@ -1,10 +1,10 @@
 #define RUBY_VERSION "2.2.9"
-#define RUBY_RELEASE_DATE "2017-12-14"
-#define RUBY_PATCHLEVEL 479
+#define RUBY_RELEASE_DATE "2017-12-15"
+#define RUBY_PATCHLEVEL 480
 
 #define RUBY_RELEASE_YEAR 2017
 #define RUBY_RELEASE_MONTH 12
-#define RUBY_RELEASE_DAY 14
+#define RUBY_RELEASE_DAY 15
 
 #include "ruby/version.h"
 
