@@ -1,3 +1,8 @@
+Fri Dec 15 00:08:26 2017  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* test/net/ftp/test_ftp.rb (process_port_or_eprt): merge a part of
+	  r56973 to pass the test introduced at previous commit.
+
 Thu Dec 14 22:52:11 2017  Shugo Maeda  <shugo@ruby-lang.org>
 
 	Fix a command injection vulnerability in Net::FTP.
